# EventStoreDb

./: .gitignore  .gitmodules  CMakeLists.txt  Example.cpp  Example.hpp  compileProto.sh  main-old.cpp  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
Grpc/: cluster.grpc.pb.cc  cluster.grpc.pb.h  cluster.pb.cc  cluster.pb.h  code.grpc.pb.cc  code.grpc.pb.h  code.pb.cc  code.pb.h  gossip.grpc.pb.cc  gossip.grpc.pb.h  gossip.pb.cc  gossip.pb.h  monitoring.grpc.pb.cc  monitoring.grpc.pb.h  monitoring.pb.cc  monitoring.pb.h  operations.grpc.pb.cc  operations.grpc.pb.h  operations.pb.cc  operations.pb.h  persistent.grpc.pb.cc  persistent.grpc.pb.h  persistent.pb.cc  persistent.pb.h  projections.grpc.pb.cc  projections.grpc.pb.h  projections.pb.cc  projections.pb.h  serverfeatures.grpc.pb.cc  serverfeatures.grpc.pb.h  serverfeatures.pb.cc  serverfeatures.pb.h  shared.grpc.pb.cc  shared.grpc.pb.h  shared.pb.cc  shared.pb.h  status.grpc.pb.cc  status.pb.cc  status.pb.h  streams.grpc.pb.cc  (+7 more)
include/: EventSourcing.h  EventStoreDb.h  uuid.h
src/: EventStoreDb.cpp
test/: CMakeLists.txt  ExampleTests.cpp  append_to_stream_test.cpp  read_stream_test.cpp
